--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
       background-image: url('sprites/city_block.png');
       background-size: 100%;
       background-repeat: no-repeat;
-      image-rendering: pixelated;
+      image-rendering: optimizeSpeed;
 
     }
 
@@ -197,8 +197,7 @@
     }
 
     #world-map {
-      transition: filter 1s;
-      transition-timing-function: cubic-bezier(0.8, 0, 0, 1);
+      transition: filter 5s;
       width: 100%;
       height: 100%;
     }
@@ -1206,12 +1205,43 @@
     }
 
 
+    #fog_filter { 
+      z-index: 10000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 10%;
+    pointer-events: none;
+    filter: invert(25%) brightness(60%) contrast(150%);
+    transition: all 5s!important;
+    transform: scale(1.5);
+    background-color: transparent;
+    }
+
+    .weather_filter {
+      pointer-events: none;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 50%;
+      transition: all 5s!important;
+      opacity:0%;
+    }
+
   </style>
   <link rel="stylesheet" href="css/zones.css">
   <link rel="stylesheet" href="css/buildings.css">
 </head>
 
 <body>
+  <div id = "weather_filter" class = "weather_filter back-row-toggle splat-toggle">
+  <div class="rain front-row"></div>
+  <div class="rain back-row"></div>
+  </div>
+  <div id = "fog_filter"></div>
   <div id="sidebar">
     <i id="radio-icon" class="sidebar-icon ri-radio-fill"></i>
     <div id="radio-dropdown" uk-dropdown>
@@ -1536,6 +1566,16 @@
   <script src="js/custom/creditFunctions.js"></script>
   <script src="js/custom/workerFunctions.js"></script>
   <script src="js/custom/initFunctions.js"></script>
+
+  <script src="js/lib/three.js"></script>
+<script src="js/lib/vanta_fog.js"></script>
+<script src="js/lib/vanta_cells.js"></script>
+<script src="js/lib/vanta_clouds.js"></script>
+<script src="js/lib/vanta_waves.js"></script>
+<script src="js/lib/vanta_birds.js"></script>
+<script src = "js/custom/rainWeather.js"></script>
+<script src = "js/custom/weatherFunctions.js"></script>
+
   <script>
 
     var playerDecidedPay = 100;
@@ -1606,8 +1646,6 @@
         autoOpen: false,
       }
       );
-
-
       notifyPlayer('Welcome to SCAM CENTER TYCOON!');
     };
 
@@ -2035,10 +2073,55 @@
       }
     }
 
+    function beginBattleEvent(){
+      killTime();
 
-    function beginBattleEvent (){
-      console.log('woo');
+      document.getElementById('battleFrame').style.top = "0";
     }
+
+
+    VANTA.FOG({
+  el: "#fog_filter",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  highlightColor: "#ffffffa0",
+  midtoneColor: "#000000a0",
+  lowlightColor: "#000000a0",
+  baseColor: "#000000",
+  blurFactor: 0.30,
+  speed: 0.00,
+  zoom: 2.75
+})
+
+
+function decideWeather(){
+
+var random = Math.random();
+
+if (random > 0.5){
+
+  //clear skies.
+  document.getElementById('fog_filter').style.opacity = "15%";
+  document.getElementById('weather_filter').style.opacity = "0%";
+  console.log('clear skies');
+
+} else {
+
+  //rain/fog.
+  document.getElementById('fog_filter').style.opacity = "25%";
+  document.getElementById('weather_filter').style.opacity = "15%";
+  console.log('foggy');
+
+  
+
+}
+
+}
+
+
 
   </script>
 </body>
