doing some more reorganizing

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8" />
   <title>Scam Center Tycoon</title>
   <!-- UIkit CSS -->
-  <link rel="stylesheet" href="css/uikit.css" />
+  <link rel="stylesheet" href="css/lib/uikit.css" />
 
   <script src="js/lib/chart.js"></script>
   <!-- UIkit JS -->
   <script src="js/lib/uikit.js"></script>
   <script src="js/lib/uikit-icons.js"></script>
-  <link rel="stylesheet" href="css/remixicon.css" />
-  <link rel="stylesheet" href="css/crt.css">
-  <link rel="stylesheet" href="css/vig.css">
+  <link rel="stylesheet" href="css/lib/remixicon.css" />
+  <link rel="stylesheet" href="css/custom/crt.css">
+  <link rel="stylesheet" href="css/customvig.css">
   <script src='js/lib/panzoom.js'></script>
   <script src="js/lib/popper.js"></script>
   <script src="js/lib/tippy.js"></script>
@@ -77,18 +77,18 @@
     }
 
   </style>
-  <link rel="stylesheet" href="css/menuBarDropdownItemStyles.css">
-  <link rel="stylesheet" href="css/menuItemStyles.css">
-  <link rel="stylesheet" href="css/sideBarMenuItems.css">
-  <link rel="stylesheet" href="css/uikitMods.css">
-  <link rel="stylesheet" href="css/menuBarStyles.css" >
-  <link rel="stylesheet" href="css/tippyConfig.css">
-  <link rel="stylesheet" href="css/taxformStyles.css">
-  <link rel="stylesheet" href="css/mailStyles.css">
-  <link rel="stylesheet" href="css/weather.css">
-  <link rel="stylesheet" href="css/battleStyles.css">
-  <link rel="stylesheet" href="css/zones.css">
-  <link rel="stylesheet" href="css/buildings.css">
+  <link rel="stylesheet" href="css/custom/menuBarDropdownItemStyles.css">
+  <link rel="stylesheet" href="css/custom/menuItemStyles.css">
+  <link rel="stylesheet" href="css/custom/sideBarMenuItems.css">
+  <link rel="stylesheet" href="css/custom/uikitMods.css">
+  <link rel="stylesheet" href="css/custom/menuBarStyles.css" >
+  <link rel="stylesheet" href="css/custom/tippyConfig.css">
+  <link rel="stylesheet" href="css/custom/taxformStyles.css">
+  <link rel="stylesheet" href="css/custom/mailStyles.css">
+  <link rel="stylesheet" href="css/custom/weather.css">
+  <link rel="stylesheet" href="css/custom/battleStyles.css">
+  <link rel="stylesheet" href="css/custom/zones.css">
+  <link rel="stylesheet" href="css/custom/buildings.css">
 </head>
 
 <body>
