making things look nicer

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <script src="js/lib/uikit-icons.js"></script>
   <link rel="stylesheet" href="css/lib/remixicon.css" />
   <link rel="stylesheet" href="css/custom/crt.css">
-  <link rel="stylesheet" href="css/customvig.css">
+  <link rel="stylesheet" href="css/custom/vig.css">
+  <link rel="stylesheet" href="css/custom/filters.css">
   <script src='js/lib/panzoom.js'></script>
   <script src="js/lib/popper.js"></script>
   <script src="js/lib/tippy.js"></script>
@@ -92,6 +93,8 @@
 </head>
 
 <body>
+  <div id = "crt-lines"style = "opacity:20%" ></div>
+  <div id = "vignette" style = "opacity:40%" ></div>
   <div id="weather_filter" class="weather_filter back-row-toggle splat-toggle">
     <div class="rain front-row"></div>
     <div class="rain back-row"></div>
