--- a/src/index.html
+++ b/src/index.html
@@ -42,13 +42,20 @@
     html {
       margin: 0;
       padding: 0px;
-      width: 100%;
+      width:100vh;
       font-family: 'gamer';
       filter: sepia(1) hue-rotate(45deg);
       user-select: none !important;
       background-color: black;
-      height: 100%;
+      width:100vh;
       overflow: hidden;
+    }
+
+    body {
+      transform:translate(-50%,-50%);
+      position:absolute;
+      top:50%;
+      left:50%;
     }
 
     .grid-container {
@@ -56,11 +63,12 @@
       grid-template-columns: repeat(48, 1fr);
       grid-template-rows: repeat(48, 1fr);
       background-color: #ccc;
-      width: 100%;
-      height: 100%;
+      width:100%;
+      height:100%;
       position: relative;
       margin: 0px;
       transition: all 0.25s linear;
+      background-color: #a1a1a1!important;
     }
 
     .grid-item {
@@ -71,6 +79,8 @@
       background-size: 100%;
       background-repeat: no-repeat;
       image-rendering: optimizeSpeed;
+      transition: opacity 0.25s linear;
+      background-color:#a1a1a1!important;
 
     }
 
@@ -96,8 +106,8 @@
 
     #world-map {
       transition: all 0.25s linear, filter 5s auto;
-      width: 100%;
-      height: 100%;
+      width:100vh;
+      height:100vh;
     }
 
 #fps {
@@ -108,17 +118,50 @@
     background-color: black;
     z-index: 100;
     margin: 7.5px;
-    width: 12.5vh;
+    width: 10vh;
     text-align: center;
     box-shadow: 4px 4px 0px green;
     font-size: 8px;
     padding: 5px;
     white-space: nowrap;
     font-family: 'pst';
-    padding-left: 7.5px;
-    padding-right: 7.5px;
 }
 
+.police-car {
+  position: absolute;
+    top: 0;
+    left: 0;
+    background-color: black;
+    width: 8px;
+    height: 8px;
+}
+
+  #help-dropdown {
+    padding:15px!important;
+  }
+
+  .guide_container {
+    background-color: green;
+    color: black;
+    font-family: 'pst';
+    border: none;
+    padding: 7.5px;
+    font-size: 8px;
+    display: block;
+    margin: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-left: 0px;
+    margin-right: 0px;
+    line-break: normal;
+    vertical-align: middle;
+  }
+
+  .guide_container i {
+    float: left;
+    vertical-align: middle;
+    transform: scale(1.1);
+  }
 
   </style>
   <link rel="stylesheet" href="css/custom/menuBarDropdownItemStyles.css">
@@ -137,7 +180,7 @@
 
 <body>
   <span id="fps"></span>
-  <div id = "crt-lines"style = "opacity:20%" ></div>
+  <div id = "crt-lines"style = "opacity:10%" ></div>
   <div id = "vignette" style = "opacity:40%" ></div>
   <div id="weather_filter" class="weather_filter back-row-toggle splat-toggle">
     <div class="rain front-row"></div>
@@ -145,15 +188,18 @@
   </div>
   <div id="fog_filter"></div>
   <div id = "player"></div>
+
   <div id="sidebar">
     <i id = "help-icon" class="sidebar-icon ri-questionnaire-fill"></i>
     <div id="help-dropdown" uk-dropdown>
-      <h1>Getting started</h1>
-      <button class = "guide_container">Buying & Selling Buildings</button>
-      <button class = "guide_container">How Expenses Work</button>
-      <button class = "guide_container">Intro to Credit 101</button>
-      <button class = "guide_container">Hiring Workers</button>
-      <button class = "guide_container">Types of Currency</button>
+      <h1 class = "selectascam" >NEED SOME HELP?</h1>
+      <hr class="selectascamhr">
+      <button class = "guide_container"><i class="ri-building-4-fill"></i> BUILDING BASICS</button>
+      <button class = "guide_container"><i class="ri-money-dollar-circle-fill"></i> EXPENSES GUIDE</button>
+      <button class = "guide_container"><i class="ri-bank-card-fill"></i> INTRO TO CREDIT</button>
+      <button class = "guide_container"><i class="ri-star-smile-fill"></i> HIRING INFO</button>
+      <button class = "guide_container"><i class="ri-database-2-fill"></i> CURRENCY TYPES</button>
+      <button class = "guide_container"><i class="ri-hand-coin-fill"></i> SCAM TYPES</button>
       </div>  
      
     <i id="radio-icon" class="sidebar-icon ri-radio-fill"></i>
@@ -329,7 +375,7 @@
         <ul class="uk-nav uk-dropdown-nav"><span style="font-size:17.5px">AVAILABLE DATACHUNK TRADES</span>
           <hr class="selectascamhr">
           <span class="datapointspan" id="datachunk_blurb" style="font-family:'pst'">DATACHUNKS ARE OBTAINED THROUGH
-            TECH SUPPORT SCAMS. THEY CAN BE USED FOR TRADE WITH INTERESTED PARTIES TO EARN HIGHER PAYOUTS.</span>
+            TECH SUPPORT OR IDENTITY THEFT SCAMS. THEY CAN BE USED FOR TRADE WITH INTERESTED PARTIES TO EARN HIGHER PAYOUTS.</span>
         </ul>
       </div>
 
@@ -407,7 +453,6 @@
         </ul>
       </div>
     </div>
-
 
   </div>
 
@@ -489,6 +534,8 @@
   <script src="js/custom/rainWeather.js"></script>
   <script src="js/custom/weatherFunctions.js"></script>
 
+  <script src="js/lib/pathfinding.js"></script>
+
   <script>
 
     var panZoomModeEnabled = true;
@@ -497,7 +544,7 @@
 
     var unlockable_options = `
     <option value="identity_theft">IDENTITY THEFT</option>
-        <option value="credit_card">CREDIT CARD</option>
+        <option value="credit_card">CNP FRAUD</option>
         <option value="tech_support">TECH SUPPORT</option>
         `;
 
@@ -994,6 +1041,14 @@
       killTime();
 
       document.getElementById('battleFrame').style.top = "0";
+      document.getElementById('weather_filter').style.display = "none";
+      document.getElementById('fog_filter').style.display = "none";
+      document.getElementById('vignette').style.display = "none";
+      document.getElementById('world-map').style.filter = "blur(10px)";
+      document.getElementById('topbar').style.display = "none";
+      document.getElementById('sidebar').style.display = "none";
+      document.getElementById('crt-lines').style.opacity = "10%";
+      document.getElementById('fps').style.display = "none";
     }
 
 
@@ -1121,9 +1176,49 @@ let render = function() {
     requestAnimFrame(render);
 };
 
-render();
+
+function spawnPoliceCars() {
+  // if the police.awareness property is greater than 0, spawn a police car.
+  if (police.awareness > 0) {
+    // create a police car
+// Assuming you have a function getRoadPath that returns an array of road positions
+var roadPath = getRoadPath();
+
+var policeCar = document.createElement('div');
+policeCar.classList.add('police-car');
+policeCar.style.left = roadPath[0].x + 'px';
+policeCar.style.top = roadPath[0].y + 'px';
+document.getElementById('world-map').appendChild(policeCar);
+
+var currentRoadIndex = 0;
+
+setInterval(function() {
+  currentRoadIndex++;
+  if (currentRoadIndex < roadPath.length) {
+    policeCar.style.left = roadPath[currentRoadIndex].x + 'px';
+    policeCar.style.top = roadPath[currentRoadIndex].y + 'px';
+  }
+}, 1000);
+  }
+}
+
+
+function getRoadPath() {
+  var roads = document.querySelectorAll('.road');
+  var roadPath = [];
+
+  roads.forEach(function(road) {
+    var rect = road.getBoundingClientRect();
+    roadPath.push({ x: rect.left, y: rect.top });
+  });
+
+  return roadPath;
+}
+
+
       
   </script>
 </body>
 
 </html>
+
